--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,5 +3,10 @@
 <script src="../JavaScript/script.js"></script>
 <link rel="stylesheet" href="../CSS/style.css" />
 <body>
-  test text
+  <ul>
+    <li><a href="reports.html">Issues</a></li>
+    <li><a href="report.html">Report an Issue</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+  <hr />
 </body>
