--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,10 +3,41 @@
 <script src="../JavaScript/script.js"></script>
 <link rel="stylesheet" href="../CSS/style.css" />
 <body>
-  <ul>
-    <li><a href="reports.html">Issues</a></li>
-    <li><a href="report.html">Report an Issue</a></li>
-    <li><a href="contact.html">Contact</a></li>
+  <ul class="navbarList">
+    <li class="navbarListItem"><a href="reports.html">Issues</a></li>
+    <li class="navbarListItem"><a href="report.html">Report an Issue</a></li>
+    <li class="navbarListItem"><a href="contact.html">Contact</a></li>
   </ul>
   <hr />
+  <div class="slideshow">
+    <div class="slide fade">
+      <textarea></textarea>
+      <div class="caption">[report_1]</div>
+    </div>
+    <div class="slide fade">
+      <textarea></textarea>
+      <div class="caption">[report_2]</div>
+    </div>
+    <div class="slide fade">
+      <textarea></textarea>
+      <div class="caption">[report_3]</div>
+    </div>
+    <div class="slide fade">
+      <textarea></textarea>
+      <div class="caption">[report_4]</div>
+    </div>
+    <div class="slide fade">
+      <textarea></textarea>
+      <div class="caption">[report_5]</div>
+    </div>
+    <a class="prev" onclick="shiftSlide(-1)">&#10094;</a>
+    <a class="next" onclick="shiftSlide(1)">&#10095;</a>
+  </div>
+  <div style="text-align:center">
+    <span class="dot" onclick="changeSlide(1)"></span>
+    <span class="dot" onclick="changeSlide(2)"></span>
+    <span class="dot" onclick="changeSlide(3)"></span>
+    <span class="dot" onclick="changeSlide(4)"></span>
+    <span class="dot" onclick="changeSlide(5)"></span>
+  </div>
 </body>
