Revert "Update index.html"
This reverts commit 1095df3df65cfa06b336f9d4e56f1dc23d9e1ada.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,47 +1,92 @@
 <!DOCTYPE html>
-<title>Broken College</title>
-<script src="../JavaScript/script.js"></script>
-<link rel="stylesheet" href="../CSS/style.css" />
+
+<head>
+  <title>Broken College</title>
+  <script src="../JavaScript/script.js"></script>
+  <link rel="stylesheet" href="../CSS/style.css" />
+</head>
+
 <body>
-  <ul>
-    <li><a href="reports.html">Issues</a></li>
-    <li><a href="report.html">Report an Issue</a></li>
-    <li><a href="contact.html">Contact</a></li>
+
+<!--FEATURE #1: Navbar [Begin]-->
+  <ul class="navbarList">
+    <li class="navbarListItem"><a href="reports.html">Issues</a></li>
+    <li class="navbarListItem"><a href="report.html">Report an Issue</a></li>
+    <li class="navbarListItem"><a href="contact.html">Contact</a></li>
   </ul>
   <hr />
-<<<<<<< Updated upstream
-</body>
-=======
+<!--FEATURE #1: Navbar [End]-->
+
+
+<!--FEATURE #2: Slideshow [Begin]-->
   <div class="slideshow">
+
+  <!--Division for: Slideshow - Item 1 [Begin]-->
     <div class="slide fade">
       <textarea></textarea>
       <div class="caption">[report_1]</div>
     </div>
+  <!--Division for: Slideshow - Item 1 [End]-->
+
+
+  <!--Division for: Slideshow - Item 2 [Begin]-->
     <div class="slide fade">
       <textarea></textarea>
       <div class="caption">[report_2]</div>
     </div>
+  <!--Division for: Slideshow - Item 2 [End]-->
+
+
+  <!--Division for: Slideshow - Item 3 [Begin]-->
     <div class="slide fade">
       <textarea></textarea>
       <div class="caption">[report_3]</div>
     </div>
+  <!--Division for: Slideshow - Item 3 [End]-->
+
+
+  <!--Division for: Slideshow - Item 4 [Begin]-->
     <div class="slide fade">
       <textarea></textarea>
       <div class="caption">[report_4]</div>
     </div>
+  <!--Division for: Slideshow - Item 4 [End]-->
+
+
+  <!--Division for: Slideshow - Item 5 [Begin]-->
     <div class="slide fade">
       <textarea></textarea>
       <div class="caption">[report_5]</div>
     </div>
-    <a class="prev" onclick="shiftSlide(-1)">&#10094;</a>
-    <a class="next" onclick="shiftSlide(1)">&#10095;</a>
+  <!--Division for: Slideshow - Item 5 [End]-->
+
+
+  <!--Division for: Slideshow - Arrow Navigation Buttons [Begin]-->
+    </div>
+      <a class="prev" onclick="shiftSlide(-1)">&#10094;</a>
+      <a class="next" onclick="shiftSlide(1)">&#10095;</a>
+    </div>
+  <!--Division for: Slideshow - Arrow Navigation Buttons [End]-->
+
+
+  <!--Division for: Slideshow - Dot Navigation Buttons [Begin]-->
+    <div style="text-align:center">
+      <span class="dot" onclick="changeSlide(1)"></span>
+      <span class="dot" onclick="changeSlide(2)"></span>
+      <span class="dot" onclick="changeSlide(3)"></span>
+      <span class="dot" onclick="changeSlide(4)"></span>
+      <span class="dot" onclick="changeSlide(5)"></span>
+    </div>
+  <!--Division for: Slideshow - Dot Navigation Buttons [End]-->
+
   </div>
-  <div style="text-align:center">
-    <span class="dot" onclick="changeSlide(1)"></span>
-    <span class="dot" onclick="changeSlide(2)"></span>
-    <span class="dot" onclick="changeSlide(3)"></span>
-    <span class="dot" onclick="changeSlide(4)"></span>
-    <span class="dot" onclick="changeSlide(5)"></span>
-  </div>
+<!--FEATURE #2: Slideshow [End]-->
+
+
+<!--FEATURE #3: REPORT Button [Begin]-->
+  <div class="reportButton">
+    
+
+<!--FEATURE #3: REPORT Button [End]-->
+
 </body>
->>>>>>> Stashed changes
