fix form tag,link report page to index,
create go back button, link campus map

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,7 +5,7 @@
 <body>
   <ul class="navbarList">
     <li class="navbarListItem"><a href="reports.html">Issues</a></li>
-    <li class="navbarListItem"><a href="report.html">Report an Issue</a></li>
+    <li class="navbarListItem"><a href="../HTML/report.html">Report an Issue</a></li>
     <li class="navbarListItem"><a href="contact.html">Contact</a></li>
   </ul>
   <hr />
