--- a/HTML/report.html
+++ b/HTML/report.html
@@ -73,7 +73,7 @@
                 />
               </div>
             </div>
-            <div class="row">
+            <div class="row float-right">
               <button type="submit" class="btn btn-primary">Submit</button>
             </div>
           </form>
