--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="../CSS/style.css" />
 <body>
   <ul class="navbarList">
-    <li class="navbarListItem"><a href="reports.html">Issues</a></li>
+    <li class="navbarListItem"><a href="postBoard.html">Issues</a></li>
     <li class="navbarListItem"><a href="reportpage.html">Report an Issue</a></li>
     <li class="navbarListItem"><a href="contact.html">Contact</a></li>
   </ul>
