--- a/HTML/postBoard.html
+++ b/HTML/postBoard.html
@@ -10,6 +10,23 @@
       </ul>
 
 
+      <div class="board">
+
+            <table id="categories">
+                <tr>
+                    <th>Post</th>
+                    <th>Location</th>
+                    <th>Time</th>
+                    <th>Picture</th>
+                </tr>
+
+
+            </table>
+
+
+
+      </div>
+
 
 
 
