dummy inputs and trying to change css

--- a/HTML/postBoard.html
+++ b/HTML/postBoard.html
@@ -9,17 +9,40 @@
         <h id="title"> Broken College </h>
       </ul>
 
+      <br> <br/>
 
       <div class="board">
 
             <table id="categories">
                 <tr>
-                    <th>Post</th>
+                    <th>Post Number</th>
                     <th>Location</th>
-                    <th>Time</th>
+                    <th>Date and Time</th>
                     <th>Picture</th>
-                </tr>
+                    <th>Link</th>
+                    <th>STATUS</th>
+                </tr> 
 
+                <tr>
+                    <th>
+                        #1
+                    </th>
+                    <th>
+                        James Hall
+                    </th>
+                    <th>
+                        March 2nd - 11:30AM 
+                    </th>
+                    <th>
+                        Not Included
+                    </th>
+                    <th>
+                        Click
+                    </th>
+                    <th>
+                        In Progress
+                    </th>
+                </tr>
 
             </table>
 
