position and vote

--- a/HTML/postBoard.html
+++ b/HTML/postBoard.html
@@ -15,6 +15,7 @@
 
             <table id="categories">
                 <tr>
+                    <th>Votes</th>
                     <th>Post Number</th>
                     <th>Location</th>
                     <th>Date and Time</th>
@@ -24,6 +25,11 @@
                 </tr> 
 
                 <tr>
+                    <th>
+
+                        0 idk
+
+                    </th>
                     <th>
                         #1
                     </th>
