fixing linking problem

--- a/HTML/login.html
+++ b/HTML/login.html
@@ -6,7 +6,7 @@
 	<!-- boostrap css -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<!-- css -->
-	<link rel="stylesheet" type="text/css" href="login.css">
+	<link rel="stylesheet" type="text/css" href="../CSS/login.css">
 
 </head>
 <body>
@@ -14,7 +14,7 @@
 	<div class="container">
 		<a href="../HTML/index.html" class="btn btn-secondary">Back</a>
 		<div class="card">
-			<img src="Resources/brooklyn college.jpg" class="card-img-top" alt="login">
+			<img src="../Resources/brooklyn college.jpg" class="card-img-top" alt="login">
 			<div class="card-body">
 				<h5 class="card-title">Login</h5>
 				<form>
