--- a/HTML/report.html
+++ b/HTML/report.html
@@ -18,7 +18,11 @@
       <div class="card">
         <div class="card-header">
           <h2
-            style="text-decoration: underline; text-align: center; margin-top: 1%"
+            style="
+              text-decoration: underline;
+              text-align: center;
+              margin-top: 1%;
+            "
           >
             Report an Issue
           </h2>
@@ -27,7 +31,7 @@
           <form>
             <div class="row">
               <div class="col-md-3">
-                <label for="location">Location</label>
+                <label for="location">Location:</label>
                 <span class="text-danger">*</span>
               </div>
               <div class="col-md-5">
@@ -62,7 +66,7 @@
               </div>
             </div>
             <div class="row">
-              <div class=" col-md-12 form-group">
+              <div class="col-md-12 form-group">
                 <label for="exampleFormControlFile1">Select a file</label>
                 <span class="text-danger">*</span>
                 <input
