--- a/HTML/postsBoard.html
+++ b/HTML/postsBoard.html
@@ -3,6 +3,7 @@
   <head>
     <title>Broken College</title>
     <script src="../JS/script.js"></script>
+    <script src="../JS/posts.js"></script>
     <link rel="stylesheet" href="../CSS/style.css" />
     <!-- boostrap css -->
     <link
@@ -14,7 +15,7 @@
     <!-- css -->
   </head>
 
-  <body>
+  <body onload="loadPosts()">
     <!--TITLE HEADER [Begin]-->
     <div class="headerTitle">
       <h1>
@@ -54,7 +55,7 @@
       style="margin-left: 1%;"
       >Back</a
     >
-    <div class="container">
+    <div class="container" id="container">
       <div class="card">
         <div class="card-header">
           <h2
@@ -68,86 +69,6 @@
           </h2>
         </div>
       </div>
-      <!-- This is the beginning of the post template, we will append one of these for each post on our post board to the div witht he class "container" -->
-      <div class="card">
-        <div class="card-body">
-          <div class="row">
-            <div class="col-md-3">
-              <label for="location" style="font-weight: bold;">Location:</label>
-            </div>
-            <div class="col-md-5">
-              <span id="location">location text</span>
-            </div>
-          </div>
-          <hr />
-          <div class="row">
-            <div class="col-md-3 form-group">
-              <label style="font-weight: bold;">Problems:</label>
-            </div>
-            <div class="col-md-8">
-              <span id="problem">problem text</span>
-            </div>
-          </div>
-          <hr />
-          <div class="row">
-            <div class="col-md-12 form-group">
-              <span id="images">images here</span>
-            </div>
-          </div>
-          <div class="row">
-            <button
-              class="btn btn-primary"
-              onclick="upvote()"
-              style="margin-left: 1%; margin-right: 1%;"
-            >
-              upvote
-            </button>
-            <button class="btn btn-primary" onclick="downvote()">
-              downvote
-            </button>
-          </div>
-        </div>
-      </div>
-      <div class="card">
-        <div class="card-body">
-          <div class="row">
-            <div class="col-md-3">
-              <label for="location" style="font-weight: bold;">Location:</label>
-            </div>
-            <div class="col-md-5">
-              <span id="location">location text</span>
-            </div>
-          </div>
-          <hr />
-          <div class="row">
-            <div class="col-md-3 form-group">
-              <label style="font-weight: bold;">Problems:</label>
-            </div>
-            <div class="col-md-8">
-              <span id="problem">problem text</span>
-            </div>
-          </div>
-          <hr />
-          <div class="row">
-            <div class="col-md-12 form-group">
-              <span id="images">images here</span>
-            </div>
-          </div>
-          <div class="row">
-            <button
-              class="btn btn-primary"
-              onclick="upvote()"
-              style="margin-left: 1%; margin-right: 1%;"
-            >
-              upvote
-            </button>
-            <button class="btn btn-primary" onclick="downvote()">
-              downvote
-            </button>
-          </div>
-        </div>
-      </div>
-      <!-- This is the end of the post template -->
     </div>
     <!--PAGE TITLE: Posts Board [End]-->
   </body>
