--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,7 +2,6 @@
 
 <head>
   <title>Broken College</title>
-  <script src="../JS/script.js"></script>
   <link rel="stylesheet" href="../CSS/style.css" />
 </head>
 
@@ -49,45 +48,41 @@
 
 
 <!--FEATURE #2: Slideshow [Begin]-->
+  <h2 style="text-align: center;">HERE ARE SOME ISSUES RESOLVED THANKS TO OUR COMMUNITY:</h2>
   <div class="slideshow">
 
   <!--Division for: Slideshow - Item 1 [Begin]-->
   <div class="slideshow">
     <div class="slide fade">
-      <textarea></textarea>
-      <div class="caption">[report_1]</div>
+      <img style="width:100%; height:500px" src="../Resources/repairedWall.jpg"/>
     </div>
   <!--Division for: Slideshow - Item 1 [End]-->
 
 
   <!--Division for: Slideshow - Item 2 [Begin]-->
     <div class="slide fade">
-      <textarea></textarea>
-      <div class="caption">[report_2]</div>
+      <img style="width:100%; height:500px" src="../Resources/repairedDoor.jpg"/>
     </div>
   <!--Division for: Slideshow - Item 2 [End]-->
 
 
   <!--Division for: Slideshow - Item 3 [Begin]-->
     <div class="slide fade">
-      <textarea></textarea>
-      <div class="caption">[report_3]</div>
+      <img style="width:100%; height:500px" src="../Resources/repairedCeiling.jpeg"/>
     </div>
   <!--Division for: Slideshow - Item 3 [End]-->
 
 
   <!--Division for: Slideshow - Item 4 [Begin]-->
     <div class="slide fade">
-      <textarea></textarea>
-      <div class="caption">[report_4]</div>
+      <img style="width:100%; height:500px" src="../Resources/repairedWindow.jpg"/>
     </div>
   <!--Division for: Slideshow - Item 4 [End]-->
 
 
   <!--Division for: Slideshow - Item 5 [Begin]-->
     <div class="slide fade">
-      <textarea></textarea>
-      <div class="caption">[report_5]</div>
+      <img style="width:100%; height:500px" src="../Resources/repairedSidewalk.jpg"/>
     </div>
   <!--Division for: Slideshow - Item 5 [End]-->
 
@@ -164,5 +159,5 @@
   </div>
 <!--FEATURE #3: Navigation Buttons [Begin]-->
 
-
+  <script src="../JS/script.js"></script> <!-- script must be inside body for the slideshow to load on pageload -->
 </body>
