--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,6 +3,12 @@
 <head>
   <title>Broken College</title>
   <link rel="stylesheet" href="../CSS/style.css" />
+  <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" 
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    /> 
 </head>
 
 <body>
