Streamlined CSS and Fixed Links
"index.html"
- applied the bootstrap used in the other pages

"postsBoard.html" and "report.html"
- fixed the href so that it returns end-user to previous page rather than just the homepage

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,6 +4,14 @@
   <title>Broken College</title>
   <script src="../JS/script.js"></script>
   <link rel="stylesheet" href="../CSS/style.css" />
+  <!-- boostrap css -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <!-- css -->
 </head>
 
 <body>
@@ -37,12 +45,7 @@
     <li class="navbarListItem"><a href="postsBoard.html">View: Posted Issues</a></li>
     <li class="navbarListItem"><a href="report.html">Report: an Issue</a></li>
     <li class="navbarListItem"><a href="contact.html">Contact: Website Admins</a></li>
-    <div class="loginListItem">
-      <li class="navbarListItem">
-        <a href="login.html">Sign-in</a> or 
-        <a href="makeAcc.html">Create Account</a>
-      </li>
-    </div>
+    <li class="navbarListItem"><a href="login.html">Login/Register</a></li>
   </ul>
   <hr />
 <!--FEATURE #1: Navbar [End]-->
