--- a/HTML/postsBoard.html
+++ b/HTML/postsBoard.html
@@ -50,7 +50,7 @@
 
     <!--PAGE TITLE: Posts Board [Begin]-->
     <a
-      href="../HTML/index.html"
+      href="javascript:history.back()"
       class="btn btn-secondary"
       style="margin-left: 1%;"
       >Back</a
