--- a/HTML/report.html
+++ b/HTML/report.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="container">
-      <a href="../HTML/index.html" class="btn btn-secondary">Back</a>
+      <a href="javascript:history.back()" class="btn btn-secondary">Back</a>
       <div class="card">
         <div class="card-header">
           <h2
