--- a/HTML/login.html
+++ b/HTML/login.html
@@ -1,44 +1,93 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Login</title>
+  <head>
+    <title>Login</title>
 
-	<!-- boostrap css -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<!-- css -->
-	<link rel="stylesheet" type="text/css" href="../CSS/login.css">
+    <!-- boostrap css -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <!-- css -->
+    <link rel="stylesheet" type="text/css" href="../CSS/login.css" />
+    <link rel="stylesheet" type="text/css" href="../CSS/style.css" />
+  </head>
+  <body>
+    <!--TITLE HEADER [Begin]-->
+    <div class="headerTitle">
+      <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand" href="../HTML/index.html">BrokenCollege</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-</head>
-<body>
-	<!-- content -->
-	<div class="container">
-		<a href="../HTML/index.html" class="btn btn-secondary">Back</a>
-		<div class="card">
-			<img src="../Resources/brooklyn college.jpg" class="card-img-top" alt="login">
-			<div class="card-body">
-				<h5 class="card-title">Login</h5>
-				<form>
-					<div class="form-group row">
-						<label for="exampleFormControlInput1" class="col-sm-3 col-form-label">E-mail</label>
-						<div class="col-sm-9">
-							<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-						</div>
-					</div>
-					<div class="form-group row">
-						<label for="inputPassword" class="col-sm-3 col-form-label">Password</label>
-						<div class="col-sm-9">
-							<input type="password" class="form-control" id="inputPassword">
-						</div>
-					</div>
-				</form>
-				<button type="submit" class="btn btn-primary">Submit</button>
-				<div class="mt-4">
-					<div class="justify-content-center">
-						Don't have an account? <a href="" class="ml-2">Sign Up</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-</body>
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item ">
+              <a href="postsBoard.html">Posts</a>
+            </li>
+            <li class="nav-item">
+              <a href="report.html">Report</a>
+            </li>
+            <li class="nav-item">
+              <a href="login.html">Login/Register</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+    <!--TITLE HEADER [End]-->
+    <!-- content -->
+    <div class="container">
+      <a href="../HTML/index.html" class="btn btn-secondary">Back</a>
+      <div class="card">
+        <img
+          src="../Resources/brooklyn college.jpg"
+          class="card-img-top"
+          alt="login"
+        />
+        <div class="card-body">
+          <h5 class="card-title">Login</h5>
+          <form>
+            <div class="form-group row">
+              <label
+                for="exampleFormControlInput1"
+                class="col-sm-3 col-form-label"
+                >E-mail</label
+              >
+              <div class="col-sm-9">
+                <input
+                  type="email"
+                  class="form-control"
+                  id="exampleFormControlInput1"
+                  placeholder="name@example.com"
+                />
+              </div>
+            </div>
+            <div class="form-group row">
+              <label for="inputPassword" class="col-sm-3 col-form-label"
+                >Password</label
+              >
+              <div class="col-sm-9">
+                <input
+                  type="password"
+                  class="form-control"
+                  id="inputPassword"
+                />
+              </div>
+            </div>
+          </form>
+          <button type="submit" class="btn btn-primary">Submit</button>
+          <div class="mt-4">
+            <div class="justify-content-center">
+              Don't have an account?
+              <a href="register.html" class="ml-2">Sign Up</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
