Fixed slideshow fading issue

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -54,27 +54,27 @@
     <div class="slideshow">
       <!--Division for: Slideshow - Item 1 [Begin]-->
       <div class="slideshow">
-        <div class="slide fade">
+        <div class="slide fadeOurs">
           <img style="width:100%; height:500px" src="../Resources/repairedWall.jpg"/>
         </div>
         <!--Division for: Slideshow - Item 1 [End]-->
         <!--Division for: Slideshow - Item 2 [Begin]-->
-        <div class="slide fade">
+        <div class="slide fadeOurs">
           <img style="width:100%; height:500px" src="../Resources/repairedDoor.jpg"/>
         </div>
         <!--Division for: Slideshow - Item 2 [End]-->
         <!--Division for: Slideshow - Item 3 [Begin]-->
-        <div class="slide fade">
+        <div class="slide fadeOurs">
           <img style="width:100%; height:500px" src="../Resources/repairedCeiling.jpeg"/>
         </div>
         <!--Division for: Slideshow - Item 3 [End]-->
         <!--Division for: Slideshow - Item 4 [Begin]-->
-        <div class="slide fade">
+        <div class="slide fadeOurs">
           <img style="width:100%; height:500px" src="../Resources/repairedWindow.jpg"/>
         </div>
         <!--Division for: Slideshow - Item 4 [End]-->
         <!--Division for: Slideshow - Item 5 [Begin]-->
-        <div class="slide fade">
+        <div class="slide fadeOurs">
           <img style="width:100%; height:500px" src="../Resources/repairedSidewalk.jpg"/>
         </div>
         <!--Division for: Slideshow - Item 5 [End]-->
@@ -83,9 +83,9 @@
         <a class="prev" onclick="shiftSlide(-1)">&#10094;</a>
         <a class="next" onclick="shiftSlide(1)">&#10095;</a>
       </div>
-  <!--Division for: Slideshow - Arrow Navigation Buttons [End]-->
+    <!--Division for: Slideshow - Arrow Navigation Buttons [End]-->
 
-  <!--Division for: Slideshow - Dot Navigation Buttons [Begin]-->
+    <!--Division for: Slideshow - Dot Navigation Buttons [Begin]-->
       <div style="text-align:center">
       <span class="dot" onclick="changeSlide(1)"></span>
       <span class="dot" onclick="changeSlide(2)"></span>
@@ -93,9 +93,7 @@
       <span class="dot" onclick="changeSlide(4)"></span>
       <span class="dot" onclick="changeSlide(5)"></span>
       </div>
-  <!--Division for: Slideshow - Dot Navigation Buttons [End]-->
-
-</div>
+    <!--Division for: Slideshow - Dot Navigation Buttons [End]-->
 <!--FEATURE #2: Slideshow [End]-->
 
 
