--- a/HTML/postsBoard.html
+++ b/HTML/postsBoard.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Broken College</title>
+    <title>Posts</title>
     <script src="../JS/script.js"></script>
     <script src="../JS/posts.js"></script>
     <!-- boostrap css -->
@@ -15,18 +15,33 @@
     <link rel="stylesheet" type="text/css" href="../CSS/style.css" />
   </head>
 
-  <body onload="loadPosts()" style="  width:100%;background-color: floralwhite;font-family: candara, verdana, arial;">
+  <body
+    onload="loadPosts()"
+    style="
+      width: 100%;
+      background-color: floralwhite;
+      font-family: candara, verdana, arial;
+    "
+  >
     <!--TITLE HEADER [Begin]-->
     <div class="headerTitle">
       <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="../HTML/index.html">BrokenCollege</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item ">
+            <li class="nav-item">
               <a href="postsBoard.html">Posts</a>
             </li>
             <li class="nav-item">
@@ -45,7 +60,8 @@
       <a
         href="javascript:history.back()"
         class="btn btn-secondary"
-        style="margin:1% 0;">
+        style="margin: 1% 0;"
+      >
         Back
       </a>
       <div class="card">
