--- a/HTML/report.html
+++ b/HTML/report.html
@@ -60,12 +60,7 @@
                 <span class="text-danger">*</span>
               </div>
               <div class="col-md-5">
-                <input class="form-control" type="text" />
-                <!-- <select id="location">
-								<option value="Ingersoll Hall">Ingersoll Hall</option>
-								<option value="boylan">Boylan</option>
-								<option value="west quart"> west qart</option>
-							</select> -->
+                <input class="form-control" type="text" placeholder = "eg: Boylan Hall/3129">
               </div>
               <div class="col-md-3">
                 <a
