--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,7 +3,6 @@
   <head>
     <title>Broken College</title>
 
-
     <!-- boostrap css -->
     <link
     rel="stylesheet"
@@ -42,40 +41,43 @@
 
   <div class = "container">
     <!--MOTTO HEADER [Begin]-->
-    <div class="headerMotto">
-      <h4 style="font-weight: bold;"> 
-        Help repair your campus! 
-      </h4>
+    <div class="headerMotto" style="text-align: center;">
+      <h2 style="font-weight: bold; margin-top: 2%;"> 
+       HELP REPAIR YOUR CAMPUS!
+      </h2>
     </div>
+    <br />
   <!--MOTTO HEADER [End]-->
 
   <!--FEATURE #2: Slideshow [Begin]-->
-    <h2 style="text-align: center;">HERE ARE SOME ISSUES RESOLVED THANKS TO OUR COMMUNITY:</h2>
+    <h4 style="text-align: center;">
+      Here are some issues resolved thanks to our community:
+    </h4>
     <div class="slideshow">
       <!--Division for: Slideshow - Item 1 [Begin]-->
       <div class="slideshow">
-        <div class="slide fade">
-          <img style="width:100%; height:500px" src="../Resources/repairedWall.jpg"/>
+        <div class="slide fadeOurs">
+          <img style="width:100%; height:500px" alt="Repaired Wall" src="../Resources/repairedWall.jpg"/>
         </div>
         <!--Division for: Slideshow - Item 1 [End]-->
         <!--Division for: Slideshow - Item 2 [Begin]-->
-        <div class="slide fade">
-          <img style="width:100%; height:500px" src="../Resources/repairedDoor.jpg"/>
+        <div class="slide fadeOurs">
+          <img style="width:100%; height:500px" alt="Repaired Door" src="../Resources/repairedDoor.jpg"/>
         </div>
         <!--Division for: Slideshow - Item 2 [End]-->
         <!--Division for: Slideshow - Item 3 [Begin]-->
-        <div class="slide fade">
-          <img style="width:100%; height:500px" src="../Resources/repairedCeiling.jpeg"/>
+        <div class="slide fadeOurs">
+          <img style="width:100%; height:500px" alt="Repaired Ceiling" src="../Resources/repairedCeiling.jpeg"/>
         </div>
         <!--Division for: Slideshow - Item 3 [End]-->
         <!--Division for: Slideshow - Item 4 [Begin]-->
-        <div class="slide fade">
-          <img style="width:100%; height:500px" src="../Resources/repairedWindow.jpg"/>
+        <div class="slide fadeOurs">
+          <img style="width:100%; height:500px" alt="Repaired Window" src="../Resources/repairedWindow.jpg"/>
         </div>
         <!--Division for: Slideshow - Item 4 [End]-->
         <!--Division for: Slideshow - Item 5 [Begin]-->
-        <div class="slide fade">
-          <img style="width:100%; height:500px" src="../Resources/repairedSidewalk.jpg"/>
+        <div class="slide fadeOurs">
+          <img style="width:100%; height:500px" alt="Repaired Sidewalk" src="../Resources/repairedSidewalk.jpg"/>
         </div>
         <!--Division for: Slideshow - Item 5 [End]-->
         <!--Division for: Slideshow - Arrow Navigation Buttons [Begin]-->
@@ -83,9 +85,9 @@
         <a class="prev" onclick="shiftSlide(-1)">&#10094;</a>
         <a class="next" onclick="shiftSlide(1)">&#10095;</a>
       </div>
-  <!--Division for: Slideshow - Arrow Navigation Buttons [End]-->
+    <!--Division for: Slideshow - Arrow Navigation Buttons [End]-->
 
-  <!--Division for: Slideshow - Dot Navigation Buttons [Begin]-->
+    <!--Division for: Slideshow - Dot Navigation Buttons [Begin]-->
       <div style="text-align:center">
       <span class="dot" onclick="changeSlide(1)"></span>
       <span class="dot" onclick="changeSlide(2)"></span>
@@ -93,59 +95,18 @@
       <span class="dot" onclick="changeSlide(4)"></span>
       <span class="dot" onclick="changeSlide(5)"></span>
       </div>
-  <!--Division for: Slideshow - Dot Navigation Buttons [End]-->
-
-</div>
+    <!--Division for: Slideshow - Dot Navigation Buttons [End]-->
 <!--FEATURE #2: Slideshow [End]-->
 
-
-<!--FEATURE #3: Navigation Buttons [Begin]-->
-<div class="navButtons">
+<div style="text-align: center; padding-top: 1%">
   <!--FEATURE #3.1: REPORT_ISSUE Button [Begin]-->
-  <div class="reportButton">
-    <button style="background-color: #ff7a7a;
-    border-color: #fffc96;
-    border-top-width: 3px;
-    border-left-width: 3px;
-    border-bottom-width: 6px;
-    border-right-width: 6px;
-    font-family: verdana, arial;
-    font-weight: bold;
-    font-style: normal;
-    font-size: 24px;
-    letter-spacing: 0.02em;
-    "
-    type="button"
-    >
-    <a href="report.html">REPORT</a>
-  </button>
-</div>
-<!--FEATURE #3.1: REPORT_ISSUE Button [End]-->
+    <button onclick="location.href = 'report.html'" class="btn btn-primary">Report</button>
+  <!--FEATURE #3.1: REPORT_ISSUE Button [End]-->
 
-<!--FEATURE #3.2: VIEW/COMMENT Button [Begin]-->
-<div class="viewButton">
-  <button style="background-color: white; 
-  border-color: lightblue;
-  border-top-width: 3px;
-  border-left-width: 3px;
-  border-bottom-width: 6px;
-  border-right-width: 6px;
-  font-family: verdana, arial;
-  font-weight: bold;
-  font-style: italic;
-  font-size: 24px;
-  letter-spacing: 0.02em;
-  "
-  type="button"
-  >
-  <!--NOTE #1: Remember to change the html file name to make link work.-->
-  <a href="postsBoard.html">VIEW / COMMENT</a>
-  <!--NOTE #1: End of comment.-->
-</button>
+  <!--FEATURE #3.2: VIEW/COMMENT Button [Begin]-->
+    <button onclick="location.href = 'postsBoard.html'" class="btn btn-primary">View Posts</button>
+  <!--FEATURE #3.2: VIEW/COMMENT Button [End]-->
 </div>
-<!--FEATURE #3.2: VIEW/COMMENT Button [End]-->
-</div>
-<!--FEATURE #3: Navigation Buttons [end]-->
 </div>
 <script src="../JS/script.js"></script> <!-- script must be inside body for the slideshow to load on pageload -->
 </body>
