--- a/HTML/login.html
+++ b/HTML/login.html
@@ -19,13 +19,21 @@
     <div class="headerTitle">
       <nav class="navbar navbar-expand-lg">
         <a class="navbar-brand" href="../HTML/index.html">BrokenCollege</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item ">
+            <li class="nav-item">
               <a href="postsBoard.html">Posts</a>
             </li>
             <li class="nav-item">
@@ -46,10 +54,10 @@
         <img
           src="../Resources/brooklyn college.jpg"
           class="card-img-top"
-          alt="login"
+          alt="Brooklyn College"
         />
         <div class="card-body">
-          <h5 class="card-title">Login</h5>
+          <h2 class="card-title">Login</h2>
           <form>
             <div class="form-group row">
               <label
